--- a/index.html
+++ b/index.html
@@ -489,18 +489,16 @@ h4 {
 
 
   
-  
-<div class="rectangle">
+
 </div>
   
 
-<img src="cat3.png" alt="cat1" class="catImage">
   
 <img src="nav.png" alt="nav" class="navImage">
   <h1 class="nameHeader2">
   About my art...
   </h1>
-<img src="bub.png" alt="picture" class="picBubble">
+
   
   <p class="nameHeader4">
 I consider myself a multimedia artist with an interest in video games and 3d art in particular!
@@ -511,10 +509,13 @@ I love working with blender and have recently being trying to learn unity as wel
   </p>
 
   
-<h2 class="nameHeader">
+
 
   <h4 class="nameHeader7"> Alchemy Lab</h4>
   
+  <h2 class="nameHeader">
+  Suggested Works
+  </h2>
   
 </body>
 </html>
