--- a/index.html
+++ b/index.html
@@ -379,8 +379,8 @@ h4 {
   
   .nameHeader {
     position: absolute;
-    top: 140%;
-    left: 39%;
+    top: 210%;
+    left: 35%;
     margin: 0;
     text-align: center;
   }
@@ -511,11 +511,9 @@ I love working with blender and have recently being trying to learn unity as wel
 
   
 
-
-  <h4 class="nameHeader7"> Alchemy Lab</h4>
   
   <h2 class="nameHeader">
-  Suggested Works
+  More coming soon...
   </h2>
   
 </body>
