--- a/index.html
+++ b/index.html
@@ -124,7 +124,6 @@ li  {
 }
   
   .a2:hover {
-  background-color: transparent;
   font-size: 30px;
   font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
@@ -132,6 +131,17 @@ li  {
   font-style: normal;
   color: #FFBF76;
   text-decoration: none;
+}
+  
+.a2Selected {
+  font-size: 30px;
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 600;
+  font-style: normal;
+  color: #FFBF76;
+  text-decoration: none;
+
 }
 
 .ul2 {
