--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@ h4 {
   
 <div class="nav2">
   <ul class="ul2">
-    <li class="li2"><a class="a2" href="#coding">Coding Projects</a></li>
+    <li class="li2"><a class="a2Selected" href="#coding">Coding Projects</a></li>
     <li class="li2"><a class="a2" href="#3Dart">3D Art</a></li>
     <li class="li2"><a class="a2" href="#2Dart">2D Art</a></li>
   </ul>
