--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ h1 {
   font-weight: <weight>;
   font-style: normal;
   font-size: 64px;
-  color: #462A2A;
+  color: white;
 }
 
 h2 {
@@ -487,18 +487,12 @@ h4 {
 
   
 <img src="nav.png" alt="nav" class="navImage">
+
   <h1 class="nameHeader2">
-  About my art...
+  Kitchen Chaos
   </h1>
 
   
-  <p class="nameHeader4">
-I consider myself a multimedia artist with an interest in video games and 3d art in particular!
-  </p>
-
-  <p class="nameHeader3">
-I love working with blender and have recently being trying to learn unity as well!
-  </p>
 
   
 
