--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 
     <img src="coding.png" alt="kitchen chaos picture" class="picImage">
 
-    <img src="nav.png" alt="navigation" class="navImage">
+    <img src="nav.png" alt="navigation bar" class="navImage">
 
     <h1 class="nameHeader2">Kitchen Chaos</h1>
 
